2008-09-20  ENDO Yasuyuki  <yasuyuki@javaopen.org>

	* test/config.scm ("error-document-alist"): use 404.html, 503.html
	("error-document 404"): use 404.html
	("error-document 503"): use 503.html.

	* test/test.conf (<kahua-config>): use 404.html, 503.html.

	* src/kahua/protocol/http.scm (kahua.protocol.http): use file.util
	(current-error-page): use file->string-list instead of read and eval.

2008-08-14  Tatsuya BIZENN  <bizenn@arthub.net>

	* Fix: src/kahua/protocol/http.scm, src/kahua/server.scm
	  Merge the 2008-08-10 fix into the 2008-03-05 fix.

2008-08-10  Shiro Kawai  <shiro@acm.org>

	* src/kahua/protocol/http.scm (kahua-header->http-header): do not
	  add 'domain' attribute in the cookie if the host name doesn't contain
	  a dot (like 'localhost'); RFC2965 says cookies with such domain
	  name should be rejected by the client.

2008-06-02  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua-spvr.scm, src/kahua-httpd.scm
	  Drop work around that reset signal mask periodically to
	  avoid the signal mask is changed unexpectedly on Mac OS X.
	  This flaw is caused by the specification of
	  sigsetjmp()/siglongjmp() on Mac OS X.  Now Gauche CVS HEAD
	  (after 2008-06-01) avoid this sucked flaw by itself.

2008-05-15  Tatsuya BIZENN  <bizenn@arthub.net>

	* Change: src/kahua/config.scm.in
	  Add kahua-revision(get source code revision) and
	  kahua-version-info(both version and revision).

	* Change: DIST, Makefile.in, configure.ac, src/Makefile.in,
	          src/kahua/config.scm.in
	  Embed working copy revision in kahua.config module at the
	  build time(experimental).  svnversion command is required.

2008-04-22  Tatsuya BIZENN  <bizenn@arthub.net>

	* These are fixes of problems on Leopard (Mac OS X 10.5.x).

	* Fix: test/shell.scm, test/httpd.scm, test/dead-lock.scm,
	       test/admin.scm, test/spvr.scm
	  Wait child processes (w/ process-wait) appropriately and drop
	  extra sys-sleep.

	* Fix: src/kahua-keyserv.scm, src/kahua-spvr.scm