@@ -1,3 +1,9 @@
+2008-10-06  Tatsuya BIZENN  <bizenn@arthub.net>
+
+	* Fix: src/kahua-httpd.scm:
+	  Fix the problem that directory->index-file returned #<undef> when
+	  cannot find any index file.
+
 2008-09-20  ENDO Yasuyuki  <yasuyuki@javaopen.org>
 
 	* test/config.scm ("error-document-alist"): use 404.html, 503.html
